[package]
name = "cli-app"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cli"

[dependencies]
arctic = { path = "../../" }
tokio = { version = "1.19.2", features = ["full"] }
clearscreen = "1.0.10"